I setup my list elements. Right now I am just getting it to do what I want it to do. I will make it look nice later.

--- a/index.html
+++ b/index.html
@@ -19,8 +19,16 @@
             <input type="text" id="myInput" placeholder="Title...">
 
             <span onclick="newElement()" class="addBtn">Add</span>
-            
+
         </div>
+
+        <ul id="myUL">
+            <li class="checked">Pay bills</li>
+            <li> Meet George</li>
+            <li>Buy Eggs</li>
+            <li>Eat Pant</li>
+            <li>Consume Prilosec</li>
+        </ul>
 
     </body>
 
