I setup my script. Imma keep it a buck, I don't even know if that shit is working correctly. It seems like my html does not like my script tag. I might to to put that in a JS file, but who fucking knows.

--- a/index.html
+++ b/index.html
@@ -30,6 +30,21 @@
             <li>Consume Prilosec</li>
         </ul>
 
+        <script>
+            
+            var myNodeList = document.getElementsByTagName("LI");
+            var i;
+
+            for(i = 0; i < myNodeList.length; i++){
+                var span = document.createElement("SPAN");
+                var txt = document.createTextNode("/u00D7");
+                span.className = "close";
+                span.appendChild(txt);
+                myNodeList[i].appendChild(span);
+            }
+
+        </script>
+
     </body>
 
 </html>
