--- a/index.html
+++ b/index.html
@@ -56,7 +56,12 @@
             }
 
             //Adds a checked symbol allegedly.
-
+            var list = document.querySelector('ul');
+            list.addEventListener('click', function(ev) {
+                if (ev.target.tagname === 'LI'){
+                    ev.target.classlist.toggle('checked');
+                }
+            }
         </script>
 
     </body>
