I have begun setup for the newElement funcition. I ma not sure if the page is working correctly. With the code I added there should be a close button at the end of each of the list items, but there is not. I am not sure if this is because I have not added in the CSS to the file yet of if I did something incorrectly. I'm sure that only time will tell me the answers.

--- a/index.html
+++ b/index.html
@@ -61,7 +61,13 @@
                 if (ev.target.tagname === 'LI'){
                     ev.target.classlist.toggle('checked');
                 }
+            }, false);
+
+            //create a ne list itme when clicking on the add button.
+            function newElement(){
+
             }
+            
         </script>
 
     </body>
