--- a/index.html
+++ b/index.html
@@ -65,9 +65,24 @@
 
             //create a ne list itme when clicking on the add button.
             function newElement(){
+                var li = document.createElement("li");
+                var inputValue = document.getElementById("myInput").value;
+                var t = document.createTextNode(inputValue);
+                li.appendChild(t);
 
+                if (inputValue === ''){
+                    alert("You must write something!");
+                }
+
+                else{
+                    document.getElementById("myUL").appendChild(li);
+                }
+
+                document.getElementById("myInput").value;
+
+                
             }
-            
+
         </script>
 
     </body>
