--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             var i;
             for(i = 0; i < myNodeList.length; i++){
                 var span = document.createElement("SPAN");
-                var txt = document.createTextNode("/u00D7");
+                var txt = document.createTextNode("\u00D7");
                 span.className = "close";
                 span.appendChild(txt);
                 myNodeList[i].appendChild(span);
@@ -80,7 +80,18 @@
 
                 document.getElementById("myInput").value;
 
-                
+                var span = document.createElement("SPAN");
+                var txt = document.getElementById("\u00D7");
+                span.className = "close";
+                span.appendChild(txt);
+                li.appendChild(span)
+
+                for(i = 0;i < close.length; i++){
+                    close[i].onclick = function(){
+                        var div = this.parentElement;
+                        div.style.display = "none";
+                    }
+                }
             }
 
         </script>
